--- a/baseWebview/build.gradle
+++ b/baseWebview/build.gradle
@@ -35,5 +35,5 @@ dependencies {
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
 
     annotationProcessor project(':processor')
-    api project(':annotations')
+    api 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
 }
