--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -5,7 +5,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.auto.service:auto-service:1.0-rc5'
     implementation 'com.squareup:javapoet:1.11.1'
-    implementation project(path: ':annotations')
+
+    implementation 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
 }
 
 //考虑到兼容性问题，添加下面设置
