--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'java-library'
-//apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'com.github.dcendents.android-maven'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.auto.service:auto-service:1.0-rc5'
     implementation 'com.squareup:javapoet:1.11.1'
 
-    implementation 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
+//    implementation 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
+    api project(':annotations')
 }
+
 
 //考虑到兼容性问题，添加下面设置
 sourceCompatibility = JavaVersion.VERSION_1_7
