--- a/baseWebview/build.gradle
+++ b/baseWebview/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 28
@@ -33,11 +33,6 @@ dependencies {
     compileOnly 'android.arch.lifecycle:runtime:1.1.1'
     compileOnly 'pub.devrel:easypermissions:1.1.0'
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
-
-//    annotationProcessor project(':processor')
-//    api project(':annotations')
-//    api 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
-//    annotationProcessor 'com.github.jiangandroid.BaseWebview:processor:1.0.6'
 
     annotationProcessor project(':processor')
     api project(':annotations')
