--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'java-library'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.google.auto.service:auto-service:1.0-rc5'
     implementation 'com.squareup:javapoet:1.11.1'
 
-//    implementation 'com.github.jiangandroid.BaseWebview:annotations:1.0.4'
-    api project(':annotations')
+    implementation project(':annotations')
 }
 
 
